Correct email address in support.html

--- a/support.html
+++ b/support.html
@@ -8,7 +8,7 @@
 
   <p>If you need help, please contact:</p>
 
-  <p>Email: denis1996+decisionlog@gmail.com</p>
+  <p>Email: denisn1996+decisionlog@gmail.com</p>
 
 </body>
 </html>
