Correct email address in privacy statement

--- a/privacy.html
+++ b/privacy.html
@@ -11,6 +11,6 @@
 
   <p>All data stays on the user's device. The app does not use analytics, tracking, or advertising identifiers.</p>
 
-  <p>If you have questions, contact: denis1996+decisionlog@gmail.com</p>
+  <p>If you have questions, contact: denisn1996+decisionlog@gmail.com</p>
 </body>
 </html>
